@@ -31,6 +31,7 @@ Changes:
 - Add IPMItool needs ipmi_load enabled in System|Advanced|loader.conf.
 - Add volblocksize on ZFS volume creation.
 - Add volmode on ZFS volume.
+- Add ability AFP compatibility per share.
 - Remove usesendfile on CIFS/SMB.
 - Remove legacy disk aliases such as /dev/ad0.
 - Change some WebGUI menus and update text strings.
